2011-07-13  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/x11/XGGeneric.h
	* Source/x11/XGServerWindow.m: Add new netwm window state atoms

2011-07-14 Fred Kiefer <FredKiefer@gmx.de>

	* Tools/win32pbs.m: Add include needed for Cygwin.

2011-07-08  Eric Wasylishen  <ewasylishen@gmail.com>

	* Headers/cairo/CairoGState.h:
	* Source/cairo/CairoGState.m: Remove most of the rounding code and
	implementation of DPSstrokeadjust.

2011-07-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/XGCairoSurface.m (-contentsOfScreen:inRect:):
	Use the passed rect properly.

2011-07-03  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/cairo/XGCairoSurface.m: Implementation of
	-[GSDisplayServer contentsOfScreen:inRect:] for x11/cairo

2011-06-22 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGServer.h: Add #include of config.h.

2011-06-15 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoContext.m (-supportsDrawGState),
	* Headers/cairo/CairoGState.h (-supportsDrawGState)
	* Source/cairo/CairoGState.m (-supportsDrawGState): Revert last
	change as gui is fixed now.

2011-06-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoContext.m (-supportsDrawGState): Delegate to gstate.
	* Headers/cairo/CairoGState.h (-supportsDrawGState): Declare this method.
	* Source/cairo/CairoGState.m (-supportsDrawGState): Only allow the
	faster drawing operation when the clip can be represented as a
	list of rectangles.
	* Source/cairo/CairoGState.m (-copyWithZone:): Always free the
	clip rectangle list.

2011-06-01  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Headers/x11/XGServerWindow.h (GSMaxWMProtocols, _gswindow_device_t):
	Enlarge protocol array to make space for the _NET_WM_SYNC_REQUEST
	protocol atom.

	* Source/x11/XGServerWindow.m (_setSupportedWMProtocols:): Add
	assertion to catch out of bounds errors in the future.

2011-05-27 13:53  David Chisnall <theraven@gna.org>

	* libs/back/trunk/Source/x11/XGServerWindow.m: Call NSZoneFree() on